# new_OPPAC

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fai.sh  fai_collimatore.sh  fai_run.sh  fai_sim.sh  run.mac  run.sh  scinti.cc  simulation_files.txt  vis.mac
include/: ActionInitialization.hh  DC.hh  PG.hh  Run.hh  RunAction.hh  SensorHit.hh  StepAction.hh  detector.hh  event.hh
src/: ActionInitialization.cc  DC.cc  PG.cc  Run.cc  RunAction.cc  SensorHit.cc  StepAction.cc  detector.cc  event.cc
